--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -33,7 +33,7 @@
   .footer-section p, 
   .footer-section address {
     line-height: 1.6;
-    color: #6c757d; /* Gris moyen */
+    color: #f0f2f5; /* Gris moyen */
   }
   
   .footer-section address p {
@@ -44,7 +44,7 @@
   
   .footer-icon {
     margin-right: 10px;
-    color: #adb5bd; /* Gris clair pour les icônes */
+    color: #f0f2f5; /* Gris clair pour les icônes */
     font-size: 14px;
   }
   
@@ -55,7 +55,7 @@
   }
   
   .social-icon {
-    color: #6c757d; /* Gris moyen */
+    color: #f0f2f5; /* Gris moyen */
     font-size: 18px;
     transition: color 0.3s;
   }
